# dotnet-binary-io

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  reader.rs  tests.rs  writer.rs
