[package]
name = "net-compat-binary"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sivadeilra/net-compat-binary"

[features]
default = ["bstr", "std"]
std = []

[dependencies]
zerocopy = "0.8.14"
bstr = { version = "1.0", optional = true }

[dev-dependencies]
hex = "0.4.3"
pretty-hex = "0.4.1"
