[package]
name = "dotnet-binary-io"
version = "0.1.0"
edition = "2021"
authors = ["Arlie Davis sivadeilra"]
description = "Reads and writes buffers using the same encoding rules as .NET's `System.IO.BinaryWriter`."
repository = "https://github.com/sivadeilra/dotnet-binary-io"
license = "Apache-2 OR MIT"

[features]
default = ["bstr", "std"]
std = []

[dependencies]
zerocopy = "0.8.14"
bstr = { version = "1.0", optional = true }

[dev-dependencies]
hex = "0.4.3"
pretty-hex = "0.4.1"
